[figures] Add universal colours to notebook figures and apply new black, cyan, lime, magenta colour scheme

--- a/fig-disordered-tracing.ipynb
+++ b/fig-disordered-tracing.ipynb
@@ -21,30 +21,26 @@
     "vmin = -3\n",
     "vmax = 4\n",
     "square_markersize_figsize_20 = 3.8\n",
-    "good_pixels_colormap = \"cool\"\n",
-    "good_pixels_alpha = 0.8\n",
-    "bad_pixels_colormap = \"cool_r\"\n",
-    "bad_pixels_alpha = 0.8\n",
-    "regular_pixels_colormap = \"gray\"\n",
-    "regular_pixels_alpha = 0.3\n",
-    "branch_1_color = \"orange\"\n",
-    "branch_2_color = \"cornflowerblue\"\n",
-    "good_mask_color = \"#3792AF\"\n",
-    "good_mask_alpha = 0.9\n",
     "\n",
-    "\n",
-    "def overlay_mask(mask: npt.NDArray, colour: str) -> None:\n",
-    "    \"\"\"Overlay a binary mask on the current figure using a specified colour.\"\"\"\n",
-    "    # Convert colour to RGBA with specified alpha\n",
-    "    rgba = mcolors.to_rgba(colour, good_mask_alpha)\n",
-    "    # Create an RGBA image where the mask is applied\n",
-    "    colored_mask = np.zeros(mask.shape + (4,), dtype=np.float32)\n",
-    "    # Apply colour to the mask by multiplying each channel by the mask\n",
-    "    for i in range(3):  # RGB channels\n",
-    "        colored_mask[..., i] = mask * rgba[i]\n",
-    "    # Apply alpha channel\n",
-    "    colored_mask[..., 3] = mask * rgba[3]\n",
-    "    plt.imshow(colored_mask)"
+    "from fig_colours_and_functions import (\n",
+    "    good_pixels_colormap,\n",
+    "    good_pixels_alpha,\n",
+    "    good_pixels_colour,\n",
+    "    good_pixels_colour_alpha,\n",
+    "    regular_pixels_colormap,\n",
+    "    regular_pixels_alpha,\n",
+    "    branch_underlying_colour,\n",
+    "    branch_overlying_colour,\n",
+    "    good_mask_color,\n",
+    "    good_mask_alpha,\n",
+    "    molecule_1_colour,\n",
+    "    molecule_2_colour,\n",
+    "    overlay_mask,\n",
+    "    dilate_branches_in_mask,\n",
+    "    plot_overlay_dilated_branches_in_mask,\n",
+    "    overlay_mask_with_specific_colour,\n",
+    "    plot_overlay_dilated_branches_in_mask_specific_colours,\n",
+    ")"
    ]
   },
   {
@@ -116,8 +112,8 @@
     "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
     "    np.ma.masked_where(height_pruning_height_original_skeleton == 0, height_pruning_height_original_skeleton),\n",
-    "    cmap=bad_pixels_colormap,\n",
-    "    alpha=bad_pixels_alpha,\n",
+    "    cmap=regular_pixels_colormap,\n",
+    "    alpha=1.0,\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-original.png\")\n",
     "plt.show()\n",
@@ -164,8 +160,8 @@
     "ax.imshow(whole_pruning_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
     "    np.ma.masked_where(whole_pruning_original_skeleton == 0, whole_pruning_original_skeleton),\n",
-    "    cmap=bad_pixels_colormap,\n",
-    "    alpha=bad_pixels_alpha,\n",
+    "    cmap=regular_pixels_colormap,\n",
+    "    alpha=1.0,\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-pruning-full.png\")\n",
     "plt.show()\n",
@@ -231,8 +227,8 @@
     "ax.imshow(height_biasing_10_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
     "    np.ma.masked_where(height_biasing_10_original_skeleton == 0, height_biasing_10_original_skeleton),\n",
-    "    cmap=bad_pixels_colormap,\n",
-    "    alpha=bad_pixels_alpha,\n",
+    "    cmap=regular_pixels_colormap,\n",
+    "    alpha=1.0,\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-biasing-10.png\")\n",
     "plt.show()\n",
@@ -255,7 +251,7 @@
     "ax.imshow(height_biasing_01_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
     "    np.ma.masked_where(height_biasing_10_original_skeleton == 0, height_biasing_10_original_skeleton),\n",
-    "    cmap=bad_pixels_colormap,\n",
+    "    cmap=regular_pixels_colormap,\n",
     "    alpha=0.4,\n",
     ")\n",
     "ax.imshow(\n",
