--- a/fig-nodestats.ipynb
+++ b/fig-nodestats.ipynb
@@ -20,15 +20,26 @@
     "vmin = -3\n",
     "vmax = 4\n",
     "square_markersize_figsize_20 = 3.8\n",
-    "figure_text_font = \"Arial\"\n",
-    "good_pixels_colormap = \"cool\"\n",
-    "good_pixels_alpha = 0.8\n",
-    "bad_pixels_colormap = \"cool_r\"\n",
-    "bad_pixels_alpha = 0.8\n",
-    "regular_pixels_colormap = \"gray\"\n",
-    "regular_pixels_alpha = 0.3\n",
-    "branch_underlying_colour = \"#500094\"\n",
-    "branch_overlying_colour = \"#D4A7FF\""
+    "\n",
+    "from fig_colours_and_functions import (\n",
+    "    good_pixels_colormap,\n",
+    "    good_pixels_alpha,\n",
+    "    good_pixels_colour,\n",
+    "    good_pixels_colour_alpha,\n",
+    "    regular_pixels_colormap,\n",
+    "    regular_pixels_alpha,\n",
+    "    branch_underlying_colour,\n",
+    "    branch_overlying_colour,\n",
+    "    good_mask_color,\n",
+    "    good_mask_alpha,\n",
+    "    molecule_1_colour,\n",
+    "    molecule_2_colour,\n",
+    "    overlay_mask,\n",
+    "    dilate_branches_in_mask,\n",
+    "    plot_overlay_dilated_branches_in_mask,\n",
+    "    overlay_mask_with_specific_colour,\n",
+    "    plot_overlay_dilated_branches_in_mask_specific_colours,\n",
+    ")"
    ]
   },
   {
@@ -80,22 +91,20 @@
     "image_nodestats_stats_grain1_node2_branch_stats = image_nodestats_stats_grain1_node2[\"branch_stats\"]\n",
     "print(f\"branch stats keys: {image_nodestats_stats_grain1_node2_branch_stats.keys()}\")\n",
     "\n",
-    "image_nodestats_stats_grain1_node2_unmatched_branch_stats = image_nodestats_stats_grain1_node2[\n",
-    "    \"unmatched_branch_stats\"\n",
-    "]\n",
+    "image_nodestats_stats_grain1_node2_unmatched_branch_stats = image_nodestats_stats_grain1_node2[\"unmatched_branch_stats\"]\n",
     "print(image_nodestats_stats_grain1_node2_unmatched_branch_stats.keys())\n",
-    "image_nodestats_stats_grain1_node2_unmatched_branch_stats_0 = (\n",
-    "    image_nodestats_stats_grain1_node2_unmatched_branch_stats[\"0\"]\n",
-    ")\n",
-    "image_nodestats_stats_grain1_node2_unmatched_branch_stats_1 = (\n",
-    "    image_nodestats_stats_grain1_node2_unmatched_branch_stats[\"1\"]\n",
-    ")\n",
-    "image_nodestats_stats_grain1_node2_unmatched_branch_stats_2 = (\n",
-    "    image_nodestats_stats_grain1_node2_unmatched_branch_stats[\"2\"]\n",
-    ")\n",
-    "image_nodestats_stats_grain1_node2_unmatched_branch_stats_3 = (\n",
-    "    image_nodestats_stats_grain1_node2_unmatched_branch_stats[\"3\"]\n",
-    ")\n",
+    "image_nodestats_stats_grain1_node2_unmatched_branch_stats_0 = image_nodestats_stats_grain1_node2_unmatched_branch_stats[\n",
+    "    \"0\"\n",
+    "]\n",
+    "image_nodestats_stats_grain1_node2_unmatched_branch_stats_1 = image_nodestats_stats_grain1_node2_unmatched_branch_stats[\n",
+    "    \"1\"\n",
+    "]\n",
+    "image_nodestats_stats_grain1_node2_unmatched_branch_stats_2 = image_nodestats_stats_grain1_node2_unmatched_branch_stats[\n",
+    "    \"2\"\n",
+    "]\n",
+    "image_nodestats_stats_grain1_node2_unmatched_branch_stats_3 = image_nodestats_stats_grain1_node2_unmatched_branch_stats[\n",
+    "    \"3\"\n",
+    "]\n",
     "print(image_nodestats_stats_grain1_node2_unmatched_branch_stats_0.keys())\n",
     "image_nodestats_stats_grain1_node2_unmatched_branch_stats_0_angles = (\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_0[\"angles\"]\n",
@@ -246,7 +255,7 @@
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(base_skeleton_masked_array, cmap=regular_pixels_colormap, alpha=regular_pixels_alpha)\n",
-    "ax.imshow(nodes_masked_array, cmap=bad_pixels_colormap, alpha=bad_pixels_alpha)\n",
+    "ax.imshow(nodes_masked_array, cmap=\"binary_r\", alpha=1)\n",
     "plt.savefig(figure_dir / \"i19-fig-nodestats-convolved-skeletons-grain1-node1.png\")\n",
     "\n",
     "# same for connected nodes\n",
@@ -262,7 +271,7 @@
     "nodes_masked_array = np.ma.masked_where(cropped_connected_nodes_nodes == 0, cropped_connected_nodes_nodes)\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(base_skeleton_masked_array, cmap=regular_pixels_colormap, alpha=regular_pixels_alpha)\n",
+    "ax.imshow(base_skeleton_masked_array, cmap=regular_pixels_colormap, alpha=0.3)\n",
     "ax.imshow(nodes_masked_array, cmap=good_pixels_colormap, alpha=good_pixels_alpha)\n",
     "plt.savefig(figure_dir / \"i19-fig-nodestats-connected-nodes-grain1-node1.png\")"
    ]
@@ -306,7 +315,7 @@
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_0_start_coords[0],\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_0_vector[1] * line_scale,\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_0_vector[0] * line_scale,\n",
-    "    color=branch_underlying_colour,\n",
+    "    color=branch_overlying_colour,\n",
     "    linewidth=line_width,\n",
     "    alpha=line_alpha,\n",
     "    head_width=arrow_head_width,\n",
@@ -318,7 +327,7 @@
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_1_start_coords[0],\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_1_vector[1] * line_scale,\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_1_vector[0] * line_scale,\n",
-    "    color=branch_overlying_colour,\n",
+    "    color=branch_underlying_colour,\n",
     "    linewidth=line_width,\n",
     "    alpha=line_alpha,\n",
     "    head_width=arrow_head_width,\n",
@@ -330,7 +339,7 @@
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_2_start_coords[0],\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_2_vector[1] * line_scale,\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_2_vector[0] * line_scale,\n",
-    "    color=branch_overlying_colour,\n",
+    "    color=branch_underlying_colour,\n",
     "    linewidth=line_width,\n",
     "    alpha=line_alpha,\n",
     "    head_width=arrow_head_width,\n",
@@ -342,7 +351,7 @@
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_3_start_coords[0],\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_3_vector[1] * line_scale,\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_3_vector[0] * line_scale,\n",
-    "    color=branch_underlying_colour,\n",
+    "    color=branch_overlying_colour,\n",
     "    linewidth=line_width,\n",
     "    alpha=line_alpha,\n",
     "    head_width=arrow_head_width,\n",
@@ -366,7 +375,7 @@
     "plt.plot(\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_0_ordered_coords[:, 1],\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_0_ordered_coords[:, 0],\n",
-    "    color=branch_underlying_colour,\n",
+    "    color=branch_overlying_colour,\n",
     "    alpha=1,\n",
     "    marker=\"s\",\n",
     "    markersize=square_markersize_figsize_20,\n",
@@ -374,7 +383,7 @@
     "plt.plot(\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_1_ordered_coords[:, 1],\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_1_ordered_coords[:, 0],\n",
-    "    color=branch_overlying_colour,\n",
+    "    color=branch_underlying_colour,\n",
     "    alpha=1,\n",
     "    marker=\"s\",\n",
     "    markersize=square_markersize_figsize_20,\n",
@@ -523,17 +532,13 @@
     "image_nodestats_stats_grain1_node2 = image_nodestats_stats_grain1[\"node_2\"]\n",
     "image_nodestats_stats_grain1_node2_branch_stats = image_nodestats_stats_grain1_node2[\"branch_stats\"]\n",
     "image_nodestats_stats_grain1_node2_branch_stats_0 = image_nodestats_stats_grain1_node2_branch_stats[\"0\"]\n",
-    "image_nodestats_stats_grain1_node2_branch_stats_0_heights = image_nodestats_stats_grain1_node2_branch_stats_0[\n",
-    "    \"heights\"\n",
-    "]\n",
+    "image_nodestats_stats_grain1_node2_branch_stats_0_heights = image_nodestats_stats_grain1_node2_branch_stats_0[\"heights\"]\n",
     "image_nodestats_stats_grain1_node2_branch_stats_0_distances = image_nodestats_stats_grain1_node2_branch_stats_0[\n",
     "    \"distances\"\n",
     "]\n",
     "print(f\"branch 0 keys: {image_nodestats_stats_grain1_node2_branch_stats_0.keys()}\")\n",
     "image_nodestats_stats_grain1_node2_branch_stats_1 = image_nodestats_stats_grain1_node2_branch_stats[\"1\"]\n",
-    "image_nodestats_stats_grain1_node2_branch_stats_1_heights = image_nodestats_stats_grain1_node2_branch_stats_1[\n",
-    "    \"heights\"\n",
-    "]\n",
+    "image_nodestats_stats_grain1_node2_branch_stats_1_heights = image_nodestats_stats_grain1_node2_branch_stats_1[\"heights\"]\n",
     "image_nodestats_stats_grain1_node2_branch_stats_0_fwhm = image_nodestats_stats_grain1_node2_branch_stats_0[\"fwhm\"]\n",
     "image_nodestats_stats_grain1_node2_branch_stats_1_distances = image_nodestats_stats_grain1_node2_branch_stats_1[\n",
     "    \"distances\"\n",
@@ -554,7 +559,7 @@
     "    marker=fwhm_plot_marker,\n",
     "    linestyle=fwhm_plot_linestyle,\n",
     "    linewidth=fwhm_plot_linewidth,\n",
-    "    color=branch_underlying_colour,\n",
+    "    color=branch_overlying_colour,\n",
     "    alpha=fwhm_plot_alpha,\n",
     ")\n",
     "plt.plot(\n",
@@ -564,7 +569,7 @@
     "    marker=fwhm_plot_marker,\n",
     "    linestyle=fwhm_plot_linestyle,\n",
     "    linewidth=fwhm_plot_linewidth,\n",
-    "    color=branch_overlying_colour,\n",
+    "    color=branch_underlying_colour,\n",
     "    alpha=fwhm_plot_alpha,\n",
     ")\n",
     "fwhm_plot_tick_fontsize = 30\n",
@@ -585,7 +590,7 @@
     "    linewidth=fwhm_plot_fwhm_linewidth * 2.5,\n",
     "    markersize=fwhm_plot_fwhm_markersize,\n",
     "    linestyle=fwhm_plot_fwhm_linestyle,\n",
-    "    color=branch_underlying_colour,\n",
+    "    color=branch_overlying_colour,\n",
     ")\n",
     "plt.plot(\n",
     "    [\n",
@@ -598,12 +603,12 @@
     "    linewidth=fwhm_plot_fwhm_linewidth,\n",
     "    markersize=fwhm_plot_fwhm_markersize,\n",
     "    linestyle=fwhm_plot_fwhm_linestyle,\n",
-    "    color=branch_overlying_colour,\n",
+    "    color=branch_underlying_colour,\n",
     ")\n",
-    "plt.xlabel(\"Distance (nm)\", fontsize=fwhm_plot_axlabel_fontsize, fontname=figure_text_font)\n",
-    "plt.ylabel(\"Height (nm)\", fontsize=fwhm_plot_axlabel_fontsize, fontname=figure_text_font)\n",
-    "plt.xticks(fontsize=fwhm_plot_tick_fontsize, fontname=figure_text_font)\n",
-    "plt.yticks(fontsize=fwhm_plot_tick_fontsize, fontname=figure_text_font)\n",
+    "plt.xlabel(\"Distance (nm)\", fontsize=fwhm_plot_axlabel_fontsize)\n",
+    "plt.ylabel(\"Height (nm)\", fontsize=fwhm_plot_axlabel_fontsize)\n",
+    "plt.xticks(fontsize=fwhm_plot_tick_fontsize)\n",
+    "plt.yticks(fontsize=fwhm_plot_tick_fontsize)\n",
     "plt.locator_params(nbins=5)\n",
     "# thicken axes borders\n",
     "for axis in [\"top\", \"bottom\", \"left\", \"right\"]:\n",
