--- a/fig-ordered-tracing.ipynb
+++ b/fig-ordered-tracing.ipynb
@@ -21,80 +21,26 @@
     "vmin = -3\n",
     "vmax = 4\n",
     "square_markersize_figsize_20 = 3.8\n",
-    "plt.rcParams[\"font.family\"] = \"Arial\"\n",
-    "good_pixels_colormap = \"cool\"\n",
-    "good_pixels_alpha = 0.8\n",
-    "bad_pixels_colormap = \"cool_r\"\n",
-    "bad_pixels_alpha = 0.8\n",
-    "regular_pixels_colormap = \"gray\"\n",
-    "regular_pixels_alpha = 0.3\n",
-    "branch_underlying_colour = \"#500094\"\n",
-    "branch_overlying_colour = \"#D4A7FF\"\n",
-    "good_mask_color = \"#3792AF\"\n",
-    "good_mask_alpha = 0.8\n",
-    "import matplotlib.colors as mcolors\n",
     "\n",
-    "\n",
-    "def overlay_mask(mask: npt.NDArray, colour: str) -> None:\n",
-    "    \"\"\"Overlay a binary mask on the current figure using a specified colour.\"\"\"\n",
-    "    # Convert colour to RGBA with specified alpha\n",
-    "    rgba = mcolors.to_rgba(colour, good_mask_alpha)\n",
-    "    # Create an RGBA image where the mask is applied\n",
-    "    colored_mask = np.zeros(mask.shape + (4,), dtype=np.float32)\n",
-    "    # Apply colour to the mask by multiplying each channel by the mask\n",
-    "    for i in range(3):  # RGB channels\n",
-    "        colored_mask[..., i] = mask * rgba[i]\n",
-    "    # Apply alpha channel\n",
-    "    colored_mask[..., 3] = mask * rgba[3]\n",
-    "    plt.imshow(colored_mask)\n",
-    "\n",
-    "\n",
-    "def dilate_branches_in_mask(\n",
-    "    branch_index_mask: npt.NDArray,\n",
-    "):\n",
-    "    \"\"\"Dilate a branch mask where the branches are dilated for visibility.\"\"\"\n",
-    "    branch_mask_dilated = np.zeros_like(branch_index_mask)\n",
-    "    for branch_index in np.unique(branch_index_mask):\n",
-    "        branch_mask = branch_index_mask == branch_index\n",
-    "        dilated_branch_mask = binary_dilation(branch_mask, iterations=1)\n",
-    "        branch_mask_dilated[dilated_branch_mask] = branch_index\n",
-    "    return branch_mask_dilated\n",
-    "\n",
-    "\n",
-    "def plot_overlay_dilated_branches_in_mask(branch_index_mask: npt.NDArray, colourmap: str = None, alpha=1):\n",
-    "    \"\"\"Plot a branch mask where the branches are dilated for visibility.\"\"\"\n",
-    "    branch_mask_dilated = dilate_branches_in_mask(branch_index_mask)\n",
-    "    plt.imshow(np.ma.masked_where(branch_mask_dilated == 0, branch_mask_dilated), cmap=colourmap, alpha=alpha)\n",
-    "\n",
-    "\n",
-    "def overlay_mask_with_specific_colour(mask: npt.NDArray, colour: str, alpha: float) -> None:\n",
-    "    \"\"\"Overlay a binary mask on the current figure using a specified colour.\"\"\"\n",
-    "    # Convert colour to RGBA with specified alpha\n",
-    "    rgba = mcolors.to_rgba(colour, alpha)\n",
-    "    # Create an RGBA image where the mask is applied\n",
-    "    colored_mask = np.zeros(mask.shape + (4,), dtype=np.float32)\n",
-    "    # Apply colour to the mask by multiplying each channel by the mask\n",
-    "    for i in range(3):  # RGB channels\n",
-    "        colored_mask[..., i] = mask * rgba[i]\n",
-    "    # Apply alpha channel\n",
-    "    colored_mask[..., 3] = mask * rgba[3]\n",
-    "    plt.imshow(colored_mask)\n",
-    "\n",
-    "\n",
-    "def plot_overlay_dilated_branches_in_mask_specific_colours(\n",
-    "    branch_index_mask: npt.NDArray, colours: dict[int, str], alpha: float = 1\n",
-    ") -> None:\n",
-    "    \"\"\"Plot a branch mask where the branches are dilated for visibility, using specific colours for each branch.\"\"\"\n",
-    "    # check that the number of colours matches the number of unique branches\n",
-    "    unique_branches = np.unique(branch_index_mask)\n",
-    "    # drop the 0 from the unique branches\n",
-    "    unique_branches = unique_branches[unique_branches != 0]\n",
-    "    print(f\"unique branches: {unique_branches}\")\n",
-    "    assert len(colours) == len(unique_branches), \"Number of colours must match number of unique branches\"\n",
-    "    branch_mask_dilated = dilate_branches_in_mask(branch_index_mask)\n",
-    "    for branch_index in unique_branches:\n",
-    "        branch_mask = branch_mask_dilated == branch_index\n",
-    "        overlay_mask_with_specific_colour(mask=branch_mask, colour=colours[branch_index], alpha=alpha)"
+    "from fig_colours_and_functions import (\n",
+    "    good_pixels_colormap,\n",
+    "    good_pixels_alpha,\n",
+    "    good_pixels_colour,\n",
+    "    good_pixels_colour_alpha,\n",
+    "    regular_pixels_colormap,\n",
+    "    regular_pixels_alpha,\n",
+    "    branch_underlying_colour,\n",
+    "    branch_overlying_colour,\n",
+    "    good_mask_color,\n",
+    "    good_mask_alpha,\n",
+    "    molecule_1_colour,\n",
+    "    molecule_2_colour,\n",
+    "    overlay_mask,\n",
+    "    dilate_branches_in_mask,\n",
+    "    plot_overlay_dilated_branches_in_mask,\n",
+    "    overlay_mask_with_specific_colour,\n",
+    "    plot_overlay_dilated_branches_in_mask_specific_colours,\n",
+    ")"
    ]
   },
   {
@@ -164,7 +110,10 @@
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ordered_skeleton_mask = image_disordered_traces_grain1_branch_indexes.astype(bool)\n",
-    "plot_overlay_dilated_branches_in_mask(ordered_skeleton_mask, colourmap=good_pixels_colormap, alpha=good_pixels_alpha)\n",
+    "# plot_overlay_dilated_branches_in_mask(ordered_skeleton_mask, colourmap=good_pixels_colormap, alpha=good_pixels_alpha)\n",
+    "plot_overlay_dilated_branches_in_mask_specific_colours(\n",
+    "    ordered_skeleton_mask, colours={1: good_pixels_colour}, alpha=good_pixels_colour_alpha\n",
+    ")\n",
     "\n",
     "for node_id, node_image_data in image_nodestats_images_grain1[\"nodes\"].items():\n",
     "    print(f\"node_id: {node_id}\")\n",
@@ -185,7 +134,7 @@
     "    # make masked array for node branch mask\n",
     "    print(np.unique(node_branch_mask))\n",
     "    plot_overlay_dilated_branches_in_mask_specific_colours(\n",
-    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=0.8\n",
+    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=1\n",
     "    )\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-picoz-branch-crossings\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
@@ -196,7 +145,7 @@
     "plt.plot(\n",
     "    picoz_spline_g1_m0_coords[:, 1],\n",
     "    picoz_spline_g1_m0_coords[:, 0],\n",
-    "    color=\"#2578B1\",\n",
+    "    color=molecule_1_colour,\n",
     "    linewidth=4,\n",
     ")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-picoz-mol-0-splined\", bbox_inches=\"tight\")\n",
@@ -255,14 +204,19 @@
     "cat_image_nodestats = cat_image_dict[\"nodestats\"][\"above\"]\n",
     "cat_image_nodestats_images_grain0 = cat_image_nodestats[\"images\"][\"grain_0\"]\n",
     "cat_image_nodestats_images_grain0_nodes = cat_image_nodestats_images_grain0[\"nodes\"]\n",
-    "plot_overlay_dilated_branches_in_mask(\n",
-    "    cat_disordered_traces_grain0_branch_indexes.astype(bool), colourmap=good_pixels_colormap, alpha=good_pixels_alpha\n",
+    "# plot_overlay_dilated_branches_in_mask(\n",
+    "#     cat_disordered_traces_grain0_branch_indexes.astype(bool), colourmap=good_pixels_colormap, alpha=good_pixels_alpha\n",
+    "# )\n",
+    "plot_overlay_dilated_branches_in_mask_specific_colours(\n",
+    "    cat_disordered_traces_grain0_branch_indexes.astype(bool),\n",
+    "    colours={1: good_pixels_colour},\n",
+    "    alpha=good_pixels_colour_alpha,\n",
     ")\n",
     "for node_id, node_image_data in cat_image_nodestats_images_grain0_nodes.items():\n",
     "    print(f\"node_id: {node_id}\")\n",
     "    node_branch_mask = node_image_data[\"node_branch_mask\"]\n",
     "    plot_overlay_dilated_branches_in_mask_specific_colours(\n",
-    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=0.8\n",
+    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=1\n",
     "    )\n",
     "    print(node_branch_mask.shape)\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-crossings-cats-image\", bbox_inches=\"tight\")\n",
@@ -274,13 +228,13 @@
     "ax.plot(\n",
     "    cat_ordered_coords_mol0[:, 1],\n",
     "    cat_ordered_coords_mol0[:, 0],\n",
-    "    color=\"#2578B1\",\n",
+    "    color=molecule_1_colour,\n",
     "    linewidth=cat_molecule_trace_linewidth,\n",
     ")\n",
     "ax.plot(\n",
     "    cat_ordered_coords_mol1[:, 1],\n",
     "    cat_ordered_coords_mol1[:, 0],\n",
-    "    color=\"#27B125\",\n",
+    "    color=molecule_2_colour,\n",
     "    linewidth=cat_molecule_trace_linewidth,\n",
     ")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-molecules-cats-image\", bbox_inches=\"tight\")\n",
@@ -294,13 +248,13 @@
     "ax.plot(\n",
     "    cat_splined_coords_mol0[:, 1],\n",
     "    cat_splined_coords_mol0[:, 0],\n",
-    "    color=\"#2578B1\",\n",
+    "    color=molecule_1_colour,\n",
     "    linewidth=4,\n",
     ")\n",
     "ax.plot(\n",
     "    cat_splined_coords_mol1[:, 1],\n",
     "    cat_splined_coords_mol1[:, 0],\n",
-    "    color=\"#27B125\",\n",
+    "    color=molecule_2_colour,\n",
     "    linewidth=4,\n",
     ")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-cats-splined\", bbox_inches=\"tight\")"
@@ -365,12 +319,12 @@
     "overlapping_nodestats_stats_grain_node1 = overlapping_nodestats_stats_grain[\"node_1\"]\n",
     "overlapping_nodestats_stats_grain_node1_branch_stats_0 = overlapping_nodestats_stats_grain_node1[\"branch_stats\"][\"0\"]\n",
     "overlapping_nodestats_stats_grain_node1_branch_stats_1 = overlapping_nodestats_stats_grain_node1[\"branch_stats\"][\"1\"]\n",
-    "overlapping_nodestats_stats_grain_node1_branch_stats_0_heights = (\n",
-    "    overlapping_nodestats_stats_grain_node1_branch_stats_0[\"heights\"]\n",
-    ")\n",
-    "overlapping_nodestats_stats_grain_node1_branch_stats_1_heights = (\n",
-    "    overlapping_nodestats_stats_grain_node1_branch_stats_1[\"heights\"]\n",
-    ")\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_0_heights = overlapping_nodestats_stats_grain_node1_branch_stats_0[\n",
+    "    \"heights\"\n",
+    "]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_1_heights = overlapping_nodestats_stats_grain_node1_branch_stats_1[\n",
+    "    \"heights\"\n",
+    "]\n",
     "overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm = overlapping_nodestats_stats_grain_node1_branch_stats_0[\n",
     "    \"fwhm\"\n",
     "]\n",
@@ -379,8 +333,16 @@
     "]\n",
     "print(f\"node 1 branch 0 fwhm: {overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm}\")\n",
     "print(f\"node 1 branch 1 fwhm: {overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm}\")\n",
-    "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_0_heights, label=\"node 1 branch 0\", color=branch_underlying_colour)\n",
-    "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_1_heights, label=\"node 1 branch 1\", color=branch_overlying_colour)\n",
+    "plt.plot(\n",
+    "    overlapping_nodestats_stats_grain_node1_branch_stats_0_heights,\n",
+    "    label=\"node 1 branch 0\",\n",
+    "    color=branch_underlying_colour,\n",
+    ")\n",
+    "plt.plot(\n",
+    "    overlapping_nodestats_stats_grain_node1_branch_stats_1_heights,\n",
+    "    label=\"node 1 branch 1\",\n",
+    "    color=branch_overlying_colour,\n",
+    ")\n",
     "plt.axhline(\n",
     "    overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm[\"half_maxs\"][2],\n",
     "    color=\"gray\",\n",
@@ -403,9 +365,7 @@
     ")\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "plot_overlay_dilated_branches_in_mask(\n",
-    "    overlapping_molecules_disordered_traces_grain_branch_indexes, colourmap=\"Accent\"\n",
-    ")\n",
+    "plot_overlay_dilated_branches_in_mask(overlapping_molecules_disordered_traces_grain_branch_indexes, colourmap=\"Accent\")\n",
     "plt.axis(\"off\")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-branch-indexes\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
@@ -413,12 +373,12 @@
     "overlapping_nodestats_stats_grain_node2 = overlapping_nodestats_stats_grain[\"node_2\"]\n",
     "overlapping_nodestats_stats_grain_node2_branch_stats_0 = overlapping_nodestats_stats_grain_node2[\"branch_stats\"][\"0\"]\n",
     "overlapping_nodestats_stats_grain_node2_branch_stats_1 = overlapping_nodestats_stats_grain_node2[\"branch_stats\"][\"1\"]\n",
-    "overlapping_nodestats_stats_grain_node2_branch_stats_0_heights = (\n",
-    "    overlapping_nodestats_stats_grain_node2_branch_stats_0[\"heights\"]\n",
-    ")\n",
-    "overlapping_nodestats_stats_grain_node2_branch_stats_1_heights = (\n",
-    "    overlapping_nodestats_stats_grain_node2_branch_stats_1[\"heights\"]\n",
-    ")\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_0_heights = overlapping_nodestats_stats_grain_node2_branch_stats_0[\n",
+    "    \"heights\"\n",
+    "]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_1_heights = overlapping_nodestats_stats_grain_node2_branch_stats_1[\n",
+    "    \"heights\"\n",
+    "]\n",
     "overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm = overlapping_nodestats_stats_grain_node2_branch_stats_0[\n",
     "    \"fwhm\"\n",
     "]\n",
@@ -431,8 +391,16 @@
     "overlapping_splining_grain_mol1 = overlapping_splining_grain[\"mol_1\"][\"spline_coords\"]\n",
     "print(f\"node 2 branch 0 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm}\")\n",
     "print(f\"node 2 branch 1 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm}\")\n",
-    "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_0_heights, label=\"node 2 branch 0\", color=branch_underlying_colour)\n",
-    "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_1_heights, label=\"node 2 branch 1\", color=branch_overlying_colour)\n",
+    "plt.plot(\n",
+    "    overlapping_nodestats_stats_grain_node2_branch_stats_0_heights,\n",
+    "    label=\"node 2 branch 0\",\n",
+    "    color=branch_underlying_colour,\n",
+    ")\n",
+    "plt.plot(\n",
+    "    overlapping_nodestats_stats_grain_node2_branch_stats_1_heights,\n",
+    "    label=\"node 2 branch 1\",\n",
+    "    color=branch_overlying_colour,\n",
+    ")\n",
     "plt.axhline(\n",
     "    overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm[\"half_maxs\"][2],\n",
     "    color=\"gray\",\n",
@@ -452,17 +420,22 @@
     "# plot branch crossings\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "plot_overlay_dilated_branches_in_mask(\n",
+    "# plot_overlay_dilated_branches_in_mask(\n",
+    "#     overlapping_molecules_disordered_traces_grain_branch_indexes.astype(bool),\n",
+    "#     colourmap=good_pixels_colormap,\n",
+    "#     alpha=good_pixels_alpha,\n",
+    "# )\n",
+    "plot_overlay_dilated_branches_in_mask_specific_colours(\n",
     "    overlapping_molecules_disordered_traces_grain_branch_indexes.astype(bool),\n",
-    "    colourmap=good_pixels_colormap,\n",
-    "    alpha=good_pixels_alpha,\n",
+    "    colours={1: good_pixels_colour},\n",
+    "    alpha=good_pixels_colour_alpha,\n",
     ")\n",
     "for node_id, node_image_data in overlapping_nodestats_images_grain[\"nodes\"].items():\n",
     "    print(f\"node_id: {node_id}\")\n",
     "    node_branch_mask = node_image_data[\"node_branch_mask\"]\n",
     "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
     "    plot_overlay_dilated_branches_in_mask_specific_colours(\n",
-    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=0.8\n",
+    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=1\n",
     "    )\n",
     "plt.axis(\"off\")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-branch-crossings\", bbox_inches=\"tight\")\n",
@@ -473,13 +446,13 @@
     "plt.plot(\n",
     "    overlapping_ordered_coords_grain_mol0_ordered_coords[:, 1],\n",
     "    overlapping_ordered_coords_grain_mol0_ordered_coords[:, 0],\n",
-    "    color=\"#2578B1\",\n",
+    "    color=molecule_1_colour,\n",
     "    linewidth=cat_molecule_trace_linewidth,\n",
     ")\n",
     "plt.plot(\n",
     "    overlapping_ordered_coords_grain_mol1_ordered_coords[:, 1],\n",
     "    overlapping_ordered_coords_grain_mol1_ordered_coords[:, 0],\n",
-    "    color=\"#27B125\",\n",
+    "    color=molecule_2_colour,\n",
     "    linewidth=cat_molecule_trace_linewidth,\n",
     ")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-ordered-coords\", bbox_inches=\"tight\")\n",
@@ -492,13 +465,13 @@
     "plt.plot(\n",
     "    overlapping_splining_grain_mol0[:, 1],\n",
     "    overlapping_splining_grain_mol0[:, 0],\n",
-    "    color=\"#2578B1\",\n",
+    "    color=molecule_1_colour,\n",
     "    linewidth=overlapping_mol_linewidth,\n",
     ")\n",
     "plt.plot(\n",
     "    overlapping_splining_grain_mol1[:, 1],\n",
     "    overlapping_splining_grain_mol1[:, 0],\n",
-    "    color=\"#27B125\",\n",
+    "    color=molecule_2_colour,\n",
     "    linewidth=overlapping_mol_linewidth,\n",
     ")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-splined\", bbox_inches=\"tight\")\n",
