[figures] print Ns for dataset separation

--- a/fig-dataset-separation.ipynb
+++ b/fig-dataset-separation.ipynb
@@ -151,6 +151,11 @@
     "df_counts = df_counts.reindex(order)\n",
     "df_percents = df_percents.reindex(order) * 100\n",
     "\n",
+    "print(f\"\\npercentages:\\n {df_percents}\")\n",
+    "\n",
+    "print(f\"number of supercoiled samples in percent plot: {df_counts.loc['data/supercoiled'].sum()}\")\n",
+    "print(f\"number of nicked samples in percent plot: {df_counts.loc['data/nicked'].sum()}\")\n",
+    "\n",
     "df_percents.plot(kind=\"bar\", stacked=True, ax=ax, width=0.7, colormap=\"Blues_r\")\n",
     "ax.margins(x=0.1)\n",
     "ax.set_xticks(ticks=[0, 1])\n",
@@ -283,7 +288,8 @@
     "plt.savefig(figure_dir / f\"fig-dataset-separation-boxplot-contour-length\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n",
-    "print(f\"medians: {df_allstats.groupby('basename')['total_contour_length'].median()}\")"
+    "print(f\"medians: {df_allstats.groupby('basename')['total_contour_length'].median()}\")\n",
+    "print(f\"means: {df_allstats.groupby('basename')['total_contour_length'].mean()}\")"
    ]
   }
  ],
