identify loose ends but realise that we need to access whole masks

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -12,6 +12,7 @@
     "from typing import Any\n",
     "from topostats.io import LoadScans\n",
     "from topostats.plottingfuncs import Colormap\n",
+    "from topostats.utils import convolve_skeleton\n",
     "\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
@@ -63,7 +64,10 @@
     "    print(file_data.keys())\n",
     "    image = file_data[\"image\"]\n",
     "    mask = file_data[\"grain_tensors\"][\"above\"][:, :, 1]\n",
+    "    p2nm = file_data[\"pixel_to_nm_scaling\"]\n",
     "    all_disordered_traces = file_data[\"disordered_traces\"][\"above\"]\n",
+    "    plt.imshow(image)\n",
+    "    plt.show()\n",
     "    for grain_index, grain_disordered_traces in all_disordered_traces.items():\n",
     "        print(f\" grain: {grain_index}\")\n",
     "        grain_bbox = grain_disordered_traces[\"bbox\"]\n",
@@ -73,16 +77,34 @@
     "        grain_mask = mask[grain_bbox[0] : grain_bbox[2], grain_bbox[1] : grain_bbox[3]]\n",
     "        print(grain_disordered_traces.keys())\n",
     "\n",
+    "        # Find the endpoints by convolving the skeleton\n",
+    "        convolved_skeleton = convolve_skeleton(skeleton)\n",
+    "\n",
+    "        # Get a list of endpoints\n",
+    "        endpoints = np.argwhere(convolved_skeleton == 2)\n",
+    "\n",
+    "        # For each endpoint pair, calculate the distance\n",
+    "        endpoint_pair_distances: list[tuple[npt.NDArray[np.int_], npt.NDArray[np.int_], float]] = []\n",
+    "        for endpoint_1_index in range(len(endpoints)):\n",
+    "            for endpoint_2_index in range(endpoint_1_index + 1, len(endpoints)):\n",
+    "                endpoint_1 = endpoints[endpoint_1_index]\n",
+    "                endpoint_2 = endpoints[endpoint_2_index]\n",
+    "                distance = np.linalg.norm((endpoint_1 - endpoint_2) * p2nm)\n",
+    "                endpoint_pair_distances.append((endpoint_1, endpoint_2, distance))\n",
+    "        # Sort by distance\n",
+    "        endpoint_pair_distances.sort(key=lambda data: data[2]) # sort by distance\n",
+    "        print(\"Endpoint pair distances (nm):\")\n",
+    "        for endpoint_1, endpoint_2, distance in endpoint_pair_distances:\n",
+    "            print(f\"  Distance: {distance:.2f} nm between {endpoint_1} and {endpoint_2}\")\n",
+    "\n",
     "        fig, ax = plt.subplots(figsize=(15, 15))\n",
     "        plt.imshow(grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "        grain_mask_mask = np.ma.masked_where(grain_mask == 0, grain_mask)\n",
     "        plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
-    "        skeleton_mask = np.ma.masked_where(skeleton == 0, skeleton)\n",
-    "        plt.imshow(skeleton_mask, cmap=\"binary_r\", alpha=1)\n",
+    "        skeleton_mask = np.ma.masked_where(convolved_skeleton == 0, convolved_skeleton)\n",
+    "        plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=1)\n",
     "        plt.title(f\"File: {filename} | Grain: {grain_index}\")\n",
-    "        plt.show()\n",
-    "\n",
-    "    break  # just do one file for now"
+    "        plt.show()"
    ]
   },
   {
